# DualStateFramework

./: CMakeLists.txt  CMakeLists.txt~  README.md  docs.dox
doc/: .header.lb  Architecture.uxf  ContextDiagram.uxf  Interface.uxf  Mainpage.txt  Vision.docx  api.dox  code.dox  design.dox  docs.dox  funcSpec.dox  parallel.uxf  report.dox  research.dox
doc/Research.pages/Data/: pasted-image-33.tif  pasted-image-35.tif  pasted-image-39.tif  pasted-image-41.tif
doc/Research.pages/Metadata/: BuildVersionHistory.plist  DocumentIdentifier  Properties.plist
doc/Specification.pages/Metadata/: DocumentIdentifier  Properties.plist
doc/Vision.pages/Metadata/: DocumentIdentifier  Properties.plist
doc/api/: DoxygenLayout.xml  Installation.txt  Mac.txt  Mainpage.txt  Win.txt  app.yaml  header.tex  source.txt
doc/api/html/: _any_8h.html  _any_8h__dep__incl.map  _any_8h__dep__incl.md5  _any_8h__incl.map  _any_8h__incl.md5  _any_8h_source.html  _any_exception_8h.html  _any_exception_8h__dep__incl.map  _any_exception_8h__dep__incl.md5  _any_exception_8h__incl.map  _any_exception_8h__incl.md5  _any_exception_8h_source.html  _config_8h.html  _config_8h__dep__incl.map  _config_8h__dep__incl.md5  _config_8h_source.html  _debug_8h.html  _debug_8h__dep__incl.map  _debug_8h__dep__incl.md5  _debug_8h__incl.map  _debug_8h__incl.md5  _debug_8h_source.html  _declaration_8h.html  _declaration_8h__dep__incl.map  _declaration_8h__dep__incl.md5  _declaration_8h__incl.map  _declaration_8h__incl.md5  _declaration_8h_source.html  _dual_state_framework_8cpp.html  _dual_state_framework_8cpp__incl.map  _dual_state_framework_8cpp__incl.md5  _dual_state_framework_8cpp_source.html  _dual_state_framework_8h.html  _dual_state_framework_8h__dep__incl.map  _dual_state_framework_8h__dep__incl.md5  _dual_state_framework_8h__incl.map  _dual_state_framework_8h__incl.md5  _dual_state_framework_8h_source.html  _export_8h.html  _export_8h__dep__incl.map  (+245 more)
doc/api/latex/: _config_8h.tex  _config_8h__dep__incl.md5  _config_8h_source.tex  _declaration_8h.tex  _declaration_8h__dep__incl.md5  _declaration_8h__incl.md5  _declaration_8h_source.tex  _linux.tex  (+130 more)
doc/code/: Mainpage.txt  generator.pl  header.tex
doc/design/: BenchmarkProgramDesign.txt  FrameworkDesign.txt  Mainpage.txt  header.tex
doc/diagrams/: FuncSpec.uxf
doc/examples/: MyDSF.h  ObjManager.h  SyncObj.h  SynchronizedInt.cpp  main.cpp  synchronizedVar.cpp
doc/funcSpec/: Mainpage.txt
doc/pages/: Linux.txt  Mac.txt  Mainpage.txt
doc/report/: Acknowledgements.txt  ConformancetoSpecificationandDesignManual.txt  DescriptionofLearning.txt  Mainpage.txt  ProjectDescription.txt  ProjectReview.txt  header.tex  reference.bib
doc/research/: Mainpage.txt  bib18152.aux  citelist.doc18152  header.tex  reference.bib
dsf/: CMakeLists.txt  CMakeLists.txt~
dsf/include/dsf/: Declaration.h  DualStateFramework.h  Lock.h  Mainpage.dox  Runnable.h  SynchronizedObject.h  SynchronizedVar.h  TaskBox.h
dsf/include/yctools/: Random.h
dsf/src/dsf/: DualStateFramework.cpp  Lock.cpp  SynchronizedObject.cpp  SynchronizedVar.cpp  TaskBox.cpp
dsf/src/yctools/: Any.cpp  AnyException.cpp  Random.cpp
example/: CMakeLists.txt  main.cpp
extlibs/libs-osx/: libtbb.dylib
include/dsf/: Config.h  Debug.h  Declaration.h  DualStateFramework.h  Export.h  Lockable.h  Runnable.h  Synchronized.h  SynchronizedObject.h  SynchronizedVar.h  Task.h  TaskArgument.h  TaskBox.h  TaskFunction.h  TaskQueue.h
include/yc/: Any.h
installer/deb/: dsf.dbp
installer/win/: dsf.ifp
profiler/: CMakeLists.txt  CMakeLists.txt~
profiler/extlib/osx/: libtbb.dylib
profiler/extlib/osx/dsf.framework/Versions/1.0.0/: dsf
profiler/extlib/osx/dsf.framework/Versions/1.0.0/Headers/: DualStateFramework.h  Lock.h  Runnable.h  Synchronisable.h  SynchronizedObject.h  SynchronizedVar.h  TaskArgument.h  TaskBox.h
profiler/extlib/osx/dsf.framework/Versions/1.0.0/Resources/: Info.plist
profiler/extlib/osx/yctools.framework/Versions/1.0.0/: yctools
profiler/extlib/osx/yctools.framework/Versions/1.0.0/Headers/: Any.h  Random.h
profiler/extlibs/headers/dsf/: Lock.h  SynchronizedVar.h
profiler/extlibs/headers/yctools/: Any.h
profiler/extlibs/headers/yctools/sfml/: EllipseShape.h
profiler/extlibs/libs-msvc/x86/libs/: dsf.lib
profiler/extlibs/libs-osx/dsf.framework/Versions/1.0.0/: dsf
profiler/extlibs/libs-osx/dsf.framework/Versions/1.0.0/Headers/: DualStateFramework.h  Lock.h  Runnable.h  Synchronisable.h  SynchronizedObject.h  Task.h  TaskBox.h  TaskFunction.h
profiler/extlibs/libs-osx/dsf.framework/Versions/1.0.0/Resources/: Info.plist
profiler/extlibs/libs-osx/yctools.framework/Versions/1.0.0/Headers/: Config.h  Export.h  Random.h
profiler/include/: BouncingCircleManager.h  DSFSFML.h  DSFSFMLOBJ.h  FPS.h  FlockingBoidManager.h  MyDSF.h  MySyncObj.h  RandomCircleManager.h  SyncBouncingCircle.h  SyncCircle.h  SyncFlockingBoid.h  SyncVector3D.h  Vector3D.h
profiler/profiler.xcodeproj/: project.pbxproj
profiler/profiler.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
profiler/profiler.xcodeproj/project.xcworkspace/xcshareddata/: profiler.xccheckout
profiler/profiler.xcodeproj/project.xcworkspace/xcuserdata/yuchen.xcuserdatad/: UserInterfaceState.xcuserstate
profiler/profiler.xcodeproj/xcuserdata/yuchen.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
profiler/profiler.xcodeproj/xcuserdata/yuchen.xcuserdatad/xcschemes/: profiler.xcscheme  xcschememanagement.plist
profiler/src/: BouncingCircleManager.cpp  DSFSFML.cpp  DSFSFMLOBJ.cpp  FPS.cpp  FlockingBoidManager.cpp  MyDSF.cpp  MySyncObj.cpp  RandomCircleManager.cpp  ResourcePath.cpp  ResourcePath.mm  SyncBouncingCircle.cpp  SyncCircle.cpp  SyncFlockingBoid.cpp  SyncVector3D.cpp  Vector3D.cpp  main.cpp
src/: CMakeLists.txt
src/dsf/: CMakeLists.txt  DualStateFramework.cpp  Lock.cpp  Lock.h  Synchronized.cpp  SynchronizedObject.cpp  SynchronizedVar.cpp  Task.cpp  TaskBox.cpp  TaskQueue.cpp
src/yc/: Any.cpp
test/test/: MyDSF.cpp  MyDSF.h  MySyncObj.cpp  MySyncObj.h  main.cpp
test/test.xcodeproj/: project.pbxproj
(+308 files in other folders)
